fixed css overlap

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,39 +3,25 @@
 */
 @import './_variables.scss';
 
-
 .App {
   position: fixed;
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   text-align: center;
-  transition: all 0.2s,
-  background-color 1s;
+  transition: all 0.2s, background-color 1s;
 }
 
-#page-content{
+#page-content {
   top: 0px;
-  width:100%;
+  width: 100%;
   background-color: $background-color;
-  &.app-view{
+  &.app-view {
     height: 100%;
-    min-height: 350px;
+    min-height: 550px;
   }
-  &.development-view{
+  &.development-view {
     min-height: 100px;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
